added pg trigger generator lib

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-subscriptions": "^1.2.1",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.34.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pg-trigger-generator": "syftchurro/pg-trigger-generator"
   }
 }
