--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:password@127.0.0.1:3344/todo-db-2?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:3355/todo-db-2?schema=public"
